rsbinder/src/sys/sys.rs

#[test]
fn bindgen_test_layout_binder_transaction_data_sg() {
    assert_eq!(
        ::std::mem::size_of::<binder_transaction_data_sg>(),
        72usize,
        concat!("Size of: ", stringify!(binder_transaction_data_sg))
    );
    assert_eq!(
        ::std::mem::align_of::<binder_transaction_data_sg>(),
        8usize,
        concat!("Alignment of ", stringify!(binder_transaction_data_sg))
    );
    fn test_field_transaction_data() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<binder_transaction_data_sg>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).transaction_data) as usize - ptr as usize
            },
            0usize,
            concat!(
                "Offset of field: ",
                stringify!(binder_transaction_data_sg),
                "::",
                stringify!(transaction_data)
            )
        );
    }
    test_field_transaction_data();
    fn test_field_buffers_size() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<binder_transaction_data_sg>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).buffers_size) as usize - ptr as usize
            },
            64usize,
            concat!(
                "Offset of field: ",
                stringify!(binder_transaction_data_sg),
                "::",
                stringify!(buffers_size)
            )
        );
    }
    test_field_buffers_size();
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct binder_ptr_cookie {
    pub ptr: binder_uintptr_t,
    pub cookie: binder_uintptr_t,
}
#[test]
fn bindgen_test_layout_binder_ptr_cookie() {
    assert_eq!(
        ::std::mem::size_of::<binder_ptr_cookie>(),
        16usize,
        concat!("Size of: ", stringify!(binder_ptr_cookie))
    );
    assert_eq!(
        ::std::mem::align_of::<binder_ptr_cookie>(),
        8usize,
        concat!("Alignment of ", stringify!(binder_ptr_cookie))
    );
    fn test_field_ptr() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<binder_ptr_cookie>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).ptr) as usize - ptr as usize
            },
            0usize,
            concat!(
                "Offset of field: ",
                stringify!(binder_ptr_cookie),
                "::",
                stringify!(ptr)
            )
        );
    }
    test_field_ptr();
    fn test_field_cookie() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<binder_ptr_cookie>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).cookie) as usize - ptr as usize
            },
            8usize,
            concat!(
                "Offset of field: ",
                stringify!(binder_ptr_cookie),
                "::",
                stringify!(cookie)
            )
        );
    }
    test_field_cookie();
}
#[repr(C, packed)]
#[derive(Debug, Copy, Clone)]
pub struct binder_handle_cookie {
    pub handle: __u32,
    pub cookie: binder_uintptr_t,
}
#[test]
fn bindgen_test_layout_binder_handle_cookie() {
    assert_eq!(
        ::std::mem::size_of::<binder_handle_cookie>(),
        12usize,
        concat!("Size of: ", stringify!(binder_handle_cookie))
    );
    assert_eq!(
        ::std::mem::align_of::<binder_handle_cookie>(),
        1usize,
        concat!("Alignment of ", stringify!(binder_handle_cookie))
    );
    fn test_field_handle() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<binder_handle_cookie>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).handle) as usize - ptr as usize
            },
            0usize,
            concat!(
                "Offset of field: ",
                stringify!(binder_handle_cookie),
                "::",
                stringify!(handle)
            )
        );
    }
    test_field_handle();
    fn test_field_cookie() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<binder_handle_cookie>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).cookie) as usize - ptr as usize
            },
            4usize,
            concat!(
                "Offset of field: ",
                stringify!(binder_handle_cookie),
                "::",
                stringify!(cookie)
            )
        );
    }
    test_field_cookie();
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct binder_pri_desc {
    pub priority: __s32,
    pub desc: __u32,
}
#[test]
fn bindgen_test_layout_binder_pri_desc() {
    assert_eq!(
        ::std::mem::size_of::<binder_pri_desc>(),
        8usize,
        concat!("Size of: ", stringify!(binder_pri_desc))
    );
    assert_eq!(
        ::std::mem::align_of::<binder_pri_desc>(),
        4usize,
        concat!("Alignment of ", stringify!(binder_pri_desc))
    );
    fn test_field_priority() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<binder_pri_desc>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).priority) as usize - ptr as usize
            },
            0usize,
            concat!(
                "Offset of field: ",
                stringify!(binder_pri_desc),
                "::",
                stringify!(priority)
            )
        );
    }
    test_field_priority();
    fn test_field_desc() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<binder_pri_desc>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).desc) as usize - ptr as usize
            },
            4usize,
            concat!(
                "Offset of field: ",
                stringify!(binder_pri_desc),
                "::",
                stringify!(desc)
            )
        );
    }
    test_field_desc();
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct binder_pri_ptr_cookie {
    pub priority: __s32,
    pub ptr: binder_uintptr_t,
    pub cookie: binder_uintptr_t,
}
#[test]
fn bindgen_test_layout_binder_pri_ptr_cookie() {
    assert_eq!(
        ::std::mem::size_of::<binder_pri_ptr_cookie>(),
        24usize,
        concat!("Size of: ", stringify!(binder_pri_ptr_cookie))
    );
    assert_eq!(
        ::std::mem::align_of::<binder_pri_ptr_cookie>(),
        8usize,
        concat!("Alignment of ", stringify!(binder_pri_ptr_cookie))
    );
    fn test_field_priority() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<binder_pri_ptr_cookie>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).priority) as usize - ptr as usize
            },
            0usize,
            concat!(
                "Offset of field: ",
                stringify!(binder_pri_ptr_cookie),
                "::",
                stringify!(priority)
            )
        );
    }
    test_field_priority();
    fn test_field_ptr() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<binder_pri_ptr_cookie>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).ptr) as usize - ptr as usize
            },
            8usize,
            concat!(
                "Offset of field: ",
                stringify!(binder_pri_ptr_cookie),
                "::",
                stringify!(ptr)
            )
        );
    }
    test_field_ptr();
    fn test_field_cookie() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<binder_pri_ptr_cookie>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).cookie) as usize - ptr as usize
            },
            16usize,
            concat!(
                "Offset of field: ",
                stringify!(binder_pri_ptr_cookie),
                "::",
                stringify!(cookie)
            )
        );
    }
    test_field_cookie();
}
